--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Zachary Reece <jamstack.course@gmail.com>",
   "dependencies": {
     "@apollo/client": "^3.2.9",
+    "@loadable/component": "^5.15.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/data-grid": "^4.0.0-alpha.21",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -15,6 +16,7 @@
     "cross-fetch": "^3.0.6",
     "gatsby": "^3.14.0",
     "gatsby-plugin-image": "^1.6.0",
+    "gatsby-plugin-loadable-components-ssr": "^3.4.0",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-offline": "^3.2.28",
@@ -31,13 +33,30 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-lottie": "^1.2.3",
-    "react-resize-aware": "^3.1.0",
-    "react-spring": "^9.0.0-rc.3",
-    "react-spring-3d-carousel": "^1.2.0",
+    "react-resize-aware": "^3.1.1",
+    "react-spring": "^9.2.4",
+    "react-spring-3d-carousel": "^1.2.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "prettier": "2.1.1"
+    "@babel/eslint-parser": "^7.15.7",
+    "@babel/preset-react": "^7.14.5",
+    "@types/node": "^16.10.2",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-wesbos": "^2.0.1",
+    "eslint-plugin-html": "^6.2.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.3"
   },
   "keywords": [
     "gatsby"
