--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-source-strapi": "^1.0.2",
     "gatsby-transformer-sharp": "^3.14.0",
+    "madge": "^5.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
