GATSBY BUILD IS A SUCCESS

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/data-grid": "^4.0.0-alpha.21",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@mui/material": "^5.0.2",
     "@stripe/react-stripe-js": "^1.2.2",
     "@stripe/stripe-js": "^1.12.1",
     "axios": "^0.21.0",
@@ -30,8 +31,8 @@
     "gatsby-transformer-sharp": "^3.14.0",
     "madge": "^5.0.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-lottie": "^1.2.3",
     "react-resize-aware": "^3.1.1",
