--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,25 @@
 {
+  "peacock.color": "#222c4a",
   "workbench.colorCustomizations": {
-    "editorError.foreground": "#00000000",
-    "editorWarning.foreground": "#00000000",
-    "editorInfo.foreground": "#00000000",
-    "activityBar.background": "#222c4a",
-    "titleBar.activeBackground": "#121727",
-    "titleBar.activeForeground": "#e7e7e7",
-    "activityBar.activeBackground": "#222c4a",
-    "activityBar.activeBorder": "#99465b",
+    "activityBar.activeBackground": "#32416d",
+    "activityBar.activeBorder": "#000000",
+    "activityBar.background": "#32416d",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#99465b",
+    "activityBarBadge.background": "#000000",
     "activityBarBadge.foreground": "#e7e7e7",
-    "statusBar.background": "#121727",
+    "editorError.foreground": "#00000000",
+    "editorInfo.foreground": "#00000000",
+    "editorWarning.foreground": "#00000000",
+    "sash.hoverBorder": "#32416d",
+    "statusBar.background": "#222c4a",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#222c4a",
-    "titleBar.inactiveBackground": "#12172799",
-    "titleBar.inactiveForeground": "#e7e7e799",
-    "editorGroup.border": "#222c4a",
-    "panel.border": "#222c4a",
-    "sash.hoverBorder": "#222c4a",
-    "sideBar.border": "#222c4a",
-    "statusBarItem.remoteBackground": "#121727",
-    "statusBarItem.remoteForeground": "#e7e7e7"
-  },
-  "peacock.color": "#121727"
+    "statusBarItem.hoverBackground": "#32416d",
+    "statusBarItem.remoteBackground": "#222c4a",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#222c4a",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#222c4a99",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  }
 }
